# python-template

./: LICENSE  Makefile  Pipfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: workflow.yml
python_template/: test_main.py
src/: main.py  test_main.py
