[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "python template"
authors = ["Hiroki SAKABE <hiroki.sakabe@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.11.1"
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
